changed the removeFirst() method to remove(0), since the Java version of Autograder is earlier than 21